# rusty-full-stack

./: Cargo.toml  README.md  Shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs  routes.rs
api/lib/src/film_repository/: memory_film_repository.rs  mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
