[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json"], optional = true }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }

[features]
backend = ["sqlx"]
