[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }
tracing = "0.1"

# shared
shared = { path = "../../shared", features = ["backend"] }
async-trait = "0.1"
uuid = { version = "1.3", features = ["serde", "v4", "js"] }

[dev-dependencies]
actix-rt = "2.0.0"
