[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
api-lib = { version = "0.1.0", path = "../lib" }
shuttle-actix-web = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
shuttle-static-folder = "0.21.0"
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }
tokio = "1.26.0"
tracing = "0.1"
